# CoreTemplateStd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_RU.md  core.h
.github/: FUNDING.yml
.github/workflows/: ci.yml
cmake/: CoreTemplateConfig.cmake.in  CoreTemplateStdConfig.cmake.in
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md
example/: CMakeLists.txt  console_main.cpp
example/qt_gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_adapter/: CMakeLists.txt  CoreQtAdapter.cpp  CoreQtAdapter.h  smoke_main.cpp
tests/: CMakeLists.txt  README.md  core_tests.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp  prefixed_include_main.cpp  qt_adapter_main.cpp
